Update home.html template input field type

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -4,11 +4,11 @@
 <form method="POST">
     <h3 align="center">Youtube Video Downloader</h3>
     <div class="form-group">
-        <label for="video-url">Video URL</label>
+        <label for="url">Video URL</label>
         <input
-        type="video-url"
+        type="url"
         class="form-control"
-        id="video-url" name="video-url"
+        id="url" name="url"
         placeholder="Enter video URL">
     </div>
     <br />
