Implement logging out and remembering logged in user

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,9 +24,10 @@
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
                 <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+                <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign Up</a>
+                <a class="nav-item nav-link" id="history" href="/history">History</a>
+                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             </div>
         </div>
     </nav>
