--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,10 +24,13 @@
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign Up</a>
+                {% if user.is_authenticated %}
                 <a class="nav-item nav-link" id="history" href="/history">History</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
+                {% else %}
+                <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign Up</a>
+                {% endif %}
             </div>
         </div>
     </nav>
