Update video history to include titles

--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -4,7 +4,7 @@
 <h3 align="center">Conversion History</h3>
 <ul class="list-group list-group-flush" id="videos">
     {% for video in user.videos %}
-    <li class="list-group-item">{{ video.url }}</li>
+    <li class="list-group-item">{{ video.title + " | " }}{{ video.url + " [" }} {{ video.date }} {{ "]" }}</li>
     {% endfor %}
 </ul>
 {% endblock %}
