Link javascript file to html

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -81,5 +81,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script
+    type="text/javascript"
+    src="{{ url_for('static', filename='index.js') }}"
+    ></script>
 </body>
 </html>
