--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -15,13 +15,13 @@
     />
     </div>
     <div class="form-group">
-    <label for="firstName">First Name</label>
+    <label for="name">Name</label>
     <input
         type="text"
         class="form-control"
-        id="firstName"
-        name="firstName"
-        placeholder="Enter first name"
+        id="name"
+        name="name"
+        placeholder="Enter your name"
     />
     </div>
     <div class="form-group">
