--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,10 +24,6 @@
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav  mr-auto">
                 <a class="nav-item nav-link" id="home" href="/">Home</a>
-                {% if not user.is_authenticated %}
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign Up</a>
-                {% endif %}
             </div>
             <div class="navbar-nav  ml-auto">
                 {% if user.is_authenticated %}
@@ -43,6 +39,9 @@
                         <a class="dropdown-item" id="delete-account" href="/delete-account">Delete Account</a>
                     </div>
                   </div>
+                {% else %}
+                <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                <a class="nav-item nav-link" id="sign-up" href="/sign-up">Sign Up</a>
                 {% endif %}
             </div>
         </div>
