--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %}
 
 {% block content %}
-<br/>
-<form method="POST">
+<form method="POST" style="margin-top:15px;">
     <h3 align="center">Login</h3>
     <div class="form-group">
     <label for="email">Email Address</label>
