--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <br/>
-<form method="POST">
+<form method="POST" style="margin-top:15px;">
     <h3 align="center">Sign Up</h3>
     <div class="form-group">
     <label for="email">Email Address</label>
