--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -11,7 +11,7 @@
         placeholder="Enter video URL">
     </div>
     <center>
-    <button type="submit" class="btn btn-primary" name="convert" value="mp4">Convert To MP4</button>&nbsp;
+    <button type="submit" class="btn btn-primary" name="convert" value="mp4">Convert To MP4</button>&nbsp;&nbsp;
     <button type="submit" class="btn btn-primary" name="convert" value="mp3">Convert To MP3</button>
     </center>
 </form>
