--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,6 +14,7 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>{% block title %}Home{% endblock %}</title>
 </head>
 <body>
