Change playlist url placeholder text

--- a/website/templates/playlist.html
+++ b/website/templates/playlist.html
@@ -8,7 +8,7 @@
         type="url"
         class="form-control"
         id="url" name="url"
-        placeholder="Enter Playlist URL">
+        placeholder="Enter playlist URL">
     </div>
     <center>
     <button type="submit" class="btn btn-primary" name="convert" value="mp4">Convert To MP4</button>&nbsp;&nbsp;
