Change views.video to be the default page
* home also redirects to video

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -24,7 +24,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
             <div class="navbar-nav  mr-auto">
-                <a class="nav-item nav-link" id="home" href="/">Home</a>
+                <a class="nav-item nav-link" id="home" href="/video">Video</a>
                 <a class="nav-item nav-link" id="home" href="/playlist">Playlist</a>
             </div>
             <div class="navbar-nav  ml-auto">
