--- a/website/templates/video.html
+++ b/website/templates/video.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %}
+{% extends "base.html" %} {% block title %}Video{% endblock %}
 
 {% block content %}
 <form method="POST">
