Make all fields required for submition

--- a/website/templates/delete_account.html
+++ b/website/templates/delete_account.html
@@ -12,7 +12,13 @@
             <div class="input-group-prepend">
               <div class="input-group-text">{{ user.name }}/</div>
             </div>
-            <input type="text" class="form-control" name="confirm-message" id="confirm-message" placeholder="Confirmation message">
+            <input type="text"
+            class="form-control"
+            name="confirm-message"
+            id="confirm-message"
+            placeholder="Confirmation message"
+            required
+            >
           </div>
         </div>
         <div class="col-auto">
