--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -12,6 +12,7 @@
         id="email"
         name="email"
         placeholder="Enter email"
+        required
     />
     </div>
     <div class="form-group">
@@ -22,6 +23,7 @@
         id="name"
         name="name"
         placeholder="Enter your name"
+        required
     />
     </div>
     <div class="form-group">
@@ -32,6 +34,7 @@
         id="password1"
         name="password1"
         placeholder="Enter password"
+        required
     />
     </div>
     <div class="form-group">
@@ -42,6 +45,7 @@
         id="password2"
         name="password2"
         placeholder="Confirm password"
+        required
     />
     </div>
     <br />
