--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -11,6 +11,7 @@
         id="email"
         name="email"
         placeholder="Enter email"
+        required
     />
     </div>
     <div class="form-group">
@@ -21,6 +22,7 @@
         id="password"
         name="password"
         placeholder="Enter password"
+        required
     />
     </div>
     <br />
