--- a/website/templates/video.html
+++ b/website/templates/video.html
@@ -8,7 +8,8 @@
         type="url"
         class="form-control"
         id="url" name="url"
-        placeholder="Enter video URL">
+        placeholder="Enter video URL"
+        required>
     </div>
     <center>
     <button type="submit" class="btn btn-primary" name="convert" value="mp4">Convert To MP4</button>&nbsp;&nbsp;
