Update empty history message

--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -21,6 +21,6 @@
     <center><button type="submit" class="btn btn-primary">Clear History</button></center>
 </form>
 {% else %}
-<center>You have not converted any videos yet. Go to the home page to start!</center>
+<center>You have not converted any videos yet. Go to the video or playlist page to start!</center>
 {% endif %}
 {% endblock %}
