Add search page & update requirements

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,6 +26,7 @@
             <div class="navbar-nav  mr-auto">
                 <a class="nav-item nav-link" id="home" href="/video">Video</a>
                 <a class="nav-item nav-link" id="home" href="/playlist">Playlist</a>
+                <a class="nav-item nav-link" id="home" href="/search">Search</a>
             </div>
             <div class="navbar-nav  ml-auto">
                 {% if user.is_authenticated %}
