Send search video links & display url in video page

--- a/website/templates/video.html
+++ b/website/templates/video.html
@@ -9,6 +9,7 @@
         class="form-control"
         id="url" name="url"
         placeholder="Enter video URL"
+        value="{{ url }}"
         required>
     </div>
     <center>
