--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -8,14 +8,12 @@
         type="text"
         class="form-control"
         id="title" name="title"
-        placeholder="Enter video or playlist title"
-        required>
+        placeholder="Enter video or playlist title">
     </div>
     <center>
     <button type="submit" class="btn btn-primary" name="search" value="video">Search Videos</button>&nbsp;&nbsp;
     <button type="submit" class="btn btn-primary" name="search" value="playlist">Search Playlists</button>
     </center>
-</form>
 <div class="overflow-auto" style="max-height: 300px;margin-top:15px;">
 <ul class="list-group list-group-flush" id="videos">
 {% for r in results %}
@@ -26,6 +24,7 @@
         {% set info = r["videoCount"]|string + " videos" %}
     {% endif %}
     <li class="list-group-item"><b>{{ r["title"] }}</b> [{{ info + " | " + "Author: " + r["channel"]["name"] }}]
+        <button type="submit" class="btn btn-primary" name="search" value="{{  link  }}">Convert</button>
         <button type="button" class="close" onClick="copyToClipboard('{{ link }}')" data-toggle="tooltip" data-placement="top" title="Copy URL to Clipboard">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
                 <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
@@ -36,4 +35,5 @@
 {% endfor %}
 </ul>
 </div>
+</form>
 {% endblock %}
