--- a/website/templates/playlist.html
+++ b/website/templates/playlist.html
@@ -9,6 +9,7 @@
         class="form-control"
         id="url" name="url"
         placeholder="Enter playlist URL"
+        value="{{ url }}"
         required>
     </div>
     <center>
