Search term now remains when submitting a form request

--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -8,7 +8,8 @@
         type="text"
         class="form-control"
         id="title" name="title"
-        placeholder="Enter video or playlist title">
+        placeholder="Enter video or playlist title"
+        value = "{{ title }}">
     </div>
     <center>
     <button type="submit" class="btn btn-primary" name="search" value="video">Search Videos</button>&nbsp;&nbsp;
