--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -8,18 +8,18 @@
     {% for i in range(user.videos|length - 1, -1, -1) %}
     <li class="list-group-item"><b>{{ user.videos[i].title }}</b> [ Type: <i>{{ user.videos[i].link_type }}, {{ user.videos[i].file_type }}</i> | Timestamp: <i>{{ user.videos[i].date }}</i> ]
         <button type="button" class="close" onClick="copyToClipboard('{{ user.videos[i].url }}')" data-toggle="tooltip" data-placement="top" title="Copy URL to Clipboard">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-clipboard" viewBox="0 0 18 18">
                 <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
                 <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
             </svg>
         </button>
-        <button type="button" class="close" style="margin-right:7px;" onClick="openInNewTab('{{ user.videos[i].url }}')" data-toggle="tooltip" data-placement="top" title="Open Video in YouTube">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-youtube" viewBox="0 0 16 16">
+        <button type="button" class="close" style="margin-right:6px;" onClick="openInNewTab('{{ user.videos[i].url }}')" data-toggle="tooltip" data-placement="top" title="Open Video in YouTube">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-youtube" viewBox="0 0 18 18">
                 <path d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z"/>
               </svg>
         </button>
-        <button type="submit" class="close" name="convert" value="{{  user.videos[i].url + ' ' + user.videos[i].link_type }}" style="margin-right:7px;" data-toggle="tooltip" data-placement="top" title="Convert Video">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 16 16">
+        <button type="submit" class="close" name="convert" value="{{  user.videos[i].url + ' ' + user.videos[i].link_type }}" style="margin-right:6px;" data-toggle="tooltip" data-placement="top" title="Convert Video">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 18 18">
                 <path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"/>
                 <path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"/>
               </svg>
@@ -29,7 +29,7 @@
 </ul>
 </div>
 {% if user.videos|length > 0 %}
-<center><button type="submit" class="btn btn-primary">Clear History</button></center>
+<center><button type="submit" class="btn btn-primary" style="margin-top:15px;">Clear History</button></center>
 {% else %}
 <center>You have not converted any videos yet. Go to the video or playlist page to start!</center>
 {% endif %}
