Rename page headers & titles

--- a/website/templates/playlist.html
+++ b/website/templates/playlist.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} {% block title %}Playlist{% endblock %}
+{% extends "base.html" %} {% block title %}Convert Playlist{% endblock %}
 
 {% block content %}
 <form method="POST">
-    <h3 align="center" style="margin-top:15px;margin-bottom:15px;">Youtube Playlist Downloader</h3>
+    <h3 align="center" style="margin-top:15px;margin-bottom:15px;">Convert & Download YouTube Playlists</h3>
     <div class="form-group">
         <input
         type="url"
