--- a/website/templates/search.html
+++ b/website/templates/search.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}Search{% endblock %}
+{% extends "base.html" %} {% block title %}Search YouTube{% endblock %}
 
 {% block content %}
 <form method="POST">
