--- a/website/templates/history.html
+++ b/website/templates/history.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %}History{% endblock %}
+{% extends "base.html" %} {% block title %}Conversion History{% endblock %}
 
 {% block content %}
 <form method="POST">
