--- a/website/templates/video.html
+++ b/website/templates/video.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} {% block title %}Video{% endblock %}
+{% extends "base.html" %} {% block title %}Convert Video{% endblock %}
 
 {% block content %}
 <form method="POST">
-    <h3 align="center" style="margin-top:15px;margin-bottom:15px;">Youtube Video Downloader</h3>
+    <h3 align="center" style="margin-top:15px;margin-bottom:15px;">Convert & Download YouTube Videos</h3>
     <div class="form-group">
         <input
         type="url"
