--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,6 +14,14 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <style type ="text/css" >
+        .footer{
+            position: fixed;
+            text-align: center;
+            bottom: 10px;
+            width: 100%;
+        }
+     </style>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <title>{% block title %}Home{% endblock %}</title>
 </head>
@@ -81,6 +89,12 @@
     <div class="container">
         {% block content %}
         {% endblock %}
+    </div>
+    <div class="footer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-github" viewBox="0 0 18 18">
+            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+        </svg>
+        This is an Open Source Project. View on <a href="https://github.com/GameGenesis/Youtube-Video-Downloader">GitHub</a>!
     </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
